--- a/src/latex/classgame.tex
+++ b/src/latex/classgame.tex
@@ -1,33 +1,22 @@
 \hypertarget{classgame}{}\doxysection{game Class Reference}
 \label{classgame}\index{game@{game}}
-
-
-{\ttfamily \#include $<$game.\+hpp$>$}
-
 \doxysubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\hyperlink{classgame_ad9c102127b5038f880067ad6c9198d38}{game}} ()
+\mbox{\Hypertarget{classgame_ab1fe8680f0e6af80a1c32defe0979642}\label{classgame_ab1fe8680f0e6af80a1c32defe0979642}} 
+int {\bfseries getscore} ()
 \item 
-\mbox{\hyperlink{classgame_ae87abd20c4d8a7906fa48e690a5f1d07}{$\sim$game}} ()
+\mbox{\Hypertarget{classgame_a33447f61bd888dbeebd182de85fc1ffc}\label{classgame_a33447f61bd888dbeebd182de85fc1ffc}} 
+int {\bfseries getnbcoup} ()
+\item 
+\mbox{\Hypertarget{classgame_a5186007d87ed99bfa7125ee371275d73}\label{classgame_a5186007d87ed99bfa7125ee371275d73}} 
+void {\bfseries augmenterscore} ()
+\item 
+\mbox{\Hypertarget{classgame_a6fa967f07863341b67aa65daa9aa2ebf}\label{classgame_a6fa967f07863341b67aa65daa9aa2ebf}} 
+void {\bfseries coupsuivant} ()
 \end{DoxyCompactItemize}
-
-
-\doxysubsection{Constructor \& Destructor Documentation}
-\mbox{\Hypertarget{classgame_ad9c102127b5038f880067ad6c9198d38}\label{classgame_ad9c102127b5038f880067ad6c9198d38}} 
-\index{game@{game}!game@{game}}
-\index{game@{game}!game@{game}}
-\doxysubsubsection{\texorpdfstring{game()}{game()}}
-{\footnotesize\ttfamily game\+::game (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
-
-\mbox{\Hypertarget{classgame_ae87abd20c4d8a7906fa48e690a5f1d07}\label{classgame_ae87abd20c4d8a7906fa48e690a5f1d07}} 
-\index{game@{game}!````~game@{$\sim$game}}
-\index{````~game@{$\sim$game}!game@{game}}
-\doxysubsubsection{\texorpdfstring{$\sim$game()}{~game()}}
-{\footnotesize\ttfamily game\+::$\sim$game (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
-
 
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
-\mbox{\hyperlink{game_8hpp}{game.\+hpp}}\end{DoxyCompactItemize}
+game.\+hpp\end{DoxyCompactItemize}
