--- a/src/latex/classinterface.tex
+++ b/src/latex/classinterface.tex
@@ -1,85 +1,29 @@
 \hypertarget{classinterface}{}\doxysection{interface Class Reference}
 \label{classinterface}\index{interface@{interface}}
-
-
-{\ttfamily \#include $<$interface.\+hpp$>$}
-
 \doxysubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\hyperlink{classinterface_a13e0ee4b9df1714d747d62ec46220c55}{interface}} ()
-\item 
-\mbox{\hyperlink{classinterface_a8511f28c5bc5d3c24a24e9aaef4db502}{$\sim$interface}} ()
-\item 
-void \mbox{\hyperlink{classinterface_ac8b71f2ed81b01080d10975322c3fa85}{afficherscore}} (sf\+::\+Render\+Window $\ast$window, std\+::string score)
-\item 
-void \mbox{\hyperlink{classinterface_acdeb4f935202482a9ea0dc2495536f68}{menu}} ()
-\item 
-void \mbox{\hyperlink{classinterface_a46d08ae446c331924c01ded84ad54748}{arreter}} ()
-\item 
-void \mbox{\hyperlink{classinterface_ab4f88a0a8e5827da1f0fd35ef552f9c1}{sauvegarder}} ()
-\item 
-void \mbox{\hyperlink{classinterface_a4dedc75bf109960b368ae55fdc85dfac}{relancer}} ()
-\item 
-void \mbox{\hyperlink{classinterface_a4676c5ea02a80c76e7a337eeddf935ef}{affichergrid}} (sf\+::\+Render\+Window $\ast$window, \mbox{\hyperlink{classgrid}{grid}} $\ast$\mbox{\hyperlink{classgrid}{grid}})
-\end{DoxyCompactItemize}
-
-
-\doxysubsection{Constructor \& Destructor Documentation}
-\mbox{\Hypertarget{classinterface_a13e0ee4b9df1714d747d62ec46220c55}\label{classinterface_a13e0ee4b9df1714d747d62ec46220c55}} 
-\index{interface@{interface}!interface@{interface}}
-\index{interface@{interface}!interface@{interface}}
-\doxysubsubsection{\texorpdfstring{interface()}{interface()}}
-{\footnotesize\ttfamily interface\+::interface (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
-
-\mbox{\Hypertarget{classinterface_a8511f28c5bc5d3c24a24e9aaef4db502}\label{classinterface_a8511f28c5bc5d3c24a24e9aaef4db502}} 
-\index{interface@{interface}!````~interface@{$\sim$interface}}
-\index{````~interface@{$\sim$interface}!interface@{interface}}
-\doxysubsubsection{\texorpdfstring{$\sim$interface()}{~interface()}}
-{\footnotesize\ttfamily interface\+::$\sim$interface (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
-
-
-
-\doxysubsection{Member Function Documentation}
-\mbox{\Hypertarget{classinterface_a4676c5ea02a80c76e7a337eeddf935ef}\label{classinterface_a4676c5ea02a80c76e7a337eeddf935ef}} 
-\index{interface@{interface}!affichergrid@{affichergrid}}
-\index{affichergrid@{affichergrid}!interface@{interface}}
-\doxysubsubsection{\texorpdfstring{affichergrid()}{affichergrid()}}
-{\footnotesize\ttfamily void interface\+::affichergrid (\begin{DoxyParamCaption}\item[{sf\+::\+Render\+Window $\ast$}]{window,  }\item[{\mbox{\hyperlink{classgrid}{grid}} $\ast$}]{grid }\end{DoxyParamCaption})}
-
 \mbox{\Hypertarget{classinterface_ac8b71f2ed81b01080d10975322c3fa85}\label{classinterface_ac8b71f2ed81b01080d10975322c3fa85}} 
-\index{interface@{interface}!afficherscore@{afficherscore}}
-\index{afficherscore@{afficherscore}!interface@{interface}}
-\doxysubsubsection{\texorpdfstring{afficherscore()}{afficherscore()}}
-{\footnotesize\ttfamily void interface\+::afficherscore (\begin{DoxyParamCaption}\item[{sf\+::\+Render\+Window $\ast$}]{window,  }\item[{std\+::string}]{score }\end{DoxyParamCaption})}
-
-\mbox{\Hypertarget{classinterface_a46d08ae446c331924c01ded84ad54748}\label{classinterface_a46d08ae446c331924c01ded84ad54748}} 
-\index{interface@{interface}!arreter@{arreter}}
-\index{arreter@{arreter}!interface@{interface}}
-\doxysubsubsection{\texorpdfstring{arreter()}{arreter()}}
-{\footnotesize\ttfamily void interface\+::arreter (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
-
+void {\bfseries afficherscore} (sf\+::\+Render\+Window $\ast$window, std\+::string score)
+\item 
 \mbox{\Hypertarget{classinterface_acdeb4f935202482a9ea0dc2495536f68}\label{classinterface_acdeb4f935202482a9ea0dc2495536f68}} 
-\index{interface@{interface}!menu@{menu}}
-\index{menu@{menu}!interface@{interface}}
-\doxysubsubsection{\texorpdfstring{menu()}{menu()}}
-{\footnotesize\ttfamily void interface\+::menu (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
-
-\mbox{\Hypertarget{classinterface_a4dedc75bf109960b368ae55fdc85dfac}\label{classinterface_a4dedc75bf109960b368ae55fdc85dfac}} 
-\index{interface@{interface}!relancer@{relancer}}
-\index{relancer@{relancer}!interface@{interface}}
-\doxysubsubsection{\texorpdfstring{relancer()}{relancer()}}
-{\footnotesize\ttfamily void interface\+::relancer (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
-
+void {\bfseries menu} ()
+\item 
+\mbox{\Hypertarget{classinterface_a46d08ae446c331924c01ded84ad54748}\label{classinterface_a46d08ae446c331924c01ded84ad54748}} 
+void {\bfseries arreter} ()
+\item 
 \mbox{\Hypertarget{classinterface_ab4f88a0a8e5827da1f0fd35ef552f9c1}\label{classinterface_ab4f88a0a8e5827da1f0fd35ef552f9c1}} 
-\index{interface@{interface}!sauvegarder@{sauvegarder}}
-\index{sauvegarder@{sauvegarder}!interface@{interface}}
-\doxysubsubsection{\texorpdfstring{sauvegarder()}{sauvegarder()}}
-{\footnotesize\ttfamily void interface\+::sauvegarder (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
-
+void {\bfseries sauvegarder} ()
+\item 
+\mbox{\Hypertarget{classinterface_a4dedc75bf109960b368ae55fdc85dfac}\label{classinterface_a4dedc75bf109960b368ae55fdc85dfac}} 
+void {\bfseries relancer} ()
+\item 
+\mbox{\Hypertarget{classinterface_a4676c5ea02a80c76e7a337eeddf935ef}\label{classinterface_a4676c5ea02a80c76e7a337eeddf935ef}} 
+void {\bfseries affichergrid} (sf\+::\+Render\+Window $\ast$window, \mbox{\hyperlink{classgrid}{grid}} $\ast$\mbox{\hyperlink{classgrid}{grid}})
+\end{DoxyCompactItemize}
 
 
 The documentation for this class was generated from the following files\+:\begin{DoxyCompactItemize}
 \item 
-\mbox{\hyperlink{interface_8hpp}{interface.\+hpp}}\item 
-\mbox{\hyperlink{interface_8cpp}{interface.\+cpp}}\end{DoxyCompactItemize}
+interface.\+hpp\item 
+interface.\+cpp\end{DoxyCompactItemize}
